Start/Stop buttons
Almost functional, I'm currently working on getting the timer box added to display John's app.py file from the application layer which is renamed "stop_watch.py"

--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -25,8 +25,12 @@
 <h1>Your Fit Timer </h1>
 <p>Press Start to track your progress:</p>
 
-<button class="button button1">START</button>
-<button class="button button2">STOP</button>
+<!-- <button class="button button1">START</button>-->
+<!-- <button class="button button2">STOP</button>-->
+<form method="post">
+  <input type="submit" value="START" name="submit_button"/>
+  <input type="submit" value="STOP" name="submit_button"/>
+</form>
 
 </body>
 </html>
