Start/Stop is working
Start/Stop is now working and now I just need to work on sending/grabbing that data from the database

--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -30,6 +30,8 @@
 <form method="post">
   <input type="submit" value="START" name="submit_button"/>
   <input type="submit" value="STOP" name="submit_button"/>
+  <br><br>
+  <input type="textbox" name="text_box" value={{Number}}>
 </form>
 
 </body>
